--- a/KioskScanner/editCell.xib
+++ b/KioskScanner/editCell.xib
@@ -7,16 +7,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="93" id="nN9-U4-IY0" customClass="editTableCell" customModule="KioskScanner" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="497" height="93"/>
+            <rect key="frame" x="0.0" y="0.0" width="527" height="93"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nN9-U4-IY0" id="fO0-0T-uPN">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rag-9f-uwJ">
-                        <rect key="frame" x="94" y="7" width="80" height="80"/>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TKc-L2-zQ3">
-                        <rect key="frame" x="197" y="8" width="46" height="21"/>
+                        <rect key="frame" x="197" y="8" width="99" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -42,34 +39,39 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OPe-GJ-skL">
-                        <rect key="frame" x="286" y="31" width="40" height="21"/>
+                        <rect key="frame" x="286" y="31" width="67" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="faB-zD-jPv">
-                        <rect key="frame" x="443" y="27" width="44" height="30"/>
+                        <rect key="frame" x="458" y="26" width="54" height="35"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                         <state key="normal" title="Delete">
                             <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XpV-R1-Cxc">
-                        <rect key="frame" x="360" y="31" width="60" height="21"/>
+                        <rect key="frame" x="375" y="31" width="60" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rag-9f-uwJ">
+                        <rect key="frame" x="100" y="7" width="80" height="80"/>
+                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="deleteButton" destination="faB-zD-jPv" id="3sa-7c-gn3"/>
                 <outlet property="itemAmount" destination="XpV-R1-Cxc" id="JC8-dz-IYA"/>
                 <outlet property="itemImage" destination="rag-9f-uwJ" id="300-xB-9Hf"/>
                 <outlet property="itemName" destination="TKc-L2-zQ3" id="oQS-7M-PAj"/>
                 <outlet property="itemPrice" destination="OPe-GJ-skL" id="OVM-e1-IFC"/>
                 <outlet property="itemQuantity" destination="9u9-ee-SLj" id="ne9-s6-gBh"/>
             </connections>
-            <point key="canvasLocation" x="391.5" y="451.5"/>
+            <point key="canvasLocation" x="406.5" y="451.5"/>
         </tableViewCell>
     </objects>
 </document>
