--- a/KioskScanner/editCell.xib
+++ b/KioskScanner/editCell.xib
@@ -6,20 +6,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="93" id="nN9-U4-IY0" customClass="editTableCell" customModule="KioskScanner" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="527" height="93"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="137" id="nN9-U4-IY0" customClass="editTableCell" customModule="KioskScanner" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="527" height="137"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nN9-U4-IY0" id="fO0-0T-uPN">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rag-9f-uwJ">
+                        <rect key="frame" x="82" y="8" width="100" height="100"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TKc-L2-zQ3">
                         <rect key="frame" x="197" y="8" width="99" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="qty" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9u9-ee-SLj">
-                        <rect key="frame" x="31" y="31" width="25" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -58,20 +55,25 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rag-9f-uwJ">
-                        <rect key="frame" x="100" y="7" width="80" height="80"/>
-                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9u9-ee-SLj">
+                        <rect key="frame" x="38" y="34" width="10" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="decreaseButton" destination="fzh-8a-mJ8" id="126-IV-7Hq"/>
                 <outlet property="deleteButton" destination="faB-zD-jPv" id="3sa-7c-gn3"/>
+                <outlet property="increaseButton" destination="fv3-I0-f0h" id="e8Q-kN-pDi"/>
                 <outlet property="itemAmount" destination="XpV-R1-Cxc" id="JC8-dz-IYA"/>
                 <outlet property="itemImage" destination="rag-9f-uwJ" id="300-xB-9Hf"/>
                 <outlet property="itemName" destination="TKc-L2-zQ3" id="oQS-7M-PAj"/>
                 <outlet property="itemPrice" destination="OPe-GJ-skL" id="OVM-e1-IFC"/>
                 <outlet property="itemQuantity" destination="9u9-ee-SLj" id="ne9-s6-gBh"/>
             </connections>
-            <point key="canvasLocation" x="406.5" y="451.5"/>
+            <point key="canvasLocation" x="406.5" y="473.5"/>
         </tableViewCell>
     </objects>
 </document>
